fixup action grouping visibility issues on smaller screens in firefox

--- a/public/js/views/app/headerView.less
+++ b/public/js/views/app/headerView.less
@@ -45,7 +45,6 @@
 }
 
 .chat-header-inner {
-  flex: 1;
   display: flex;
   align-items: flex-start;
   width: 100%;
@@ -251,6 +250,8 @@
 
 .chat-header__action-grouping {
   align-items: stretch;
+  flex-basis: 200px;
+  margin-left: auto;
 }
 
 .chat-header__org-page,
